--- a/src/components/Home/Card.css
+++ b/src/components/Home/Card.css
@@ -7,3 +7,11 @@
 .card_bg{
     background-color:#EBD09B;
 }
+.icon_one{
+    color: #B0BABF;
+    margin-left: 300px;
+    
+}
+.head_one{
+    margin-right: 300px;
+}
